fix overflow

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -50,9 +50,8 @@ a,
 
 
 body, html {
-  height: 100%;
+  overflow: auto !important;
   min-height: 100%;
-  overflow-x: hidden;
 }
 
 .blog-header {
